--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 div {
-	font-family: "roboto";
+	font-family: "Roboto", "Arial";
 	font-size: 250px;
 	text-align: center;
 	vertical-align: center;
