--- a/views/item.html
+++ b/views/item.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
 
    <title>Palm Parts</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width initial-scale=1">
-   <link rel="stylesheet" href="css/fonts.css">
-   <link rel="stylesheet" href="css/styles.css">
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/fonts.css">
+   <link rel="stylesheet" href="../css/styles.css">
+   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 
 <body>
 <header>
@@ -21,14 +24,13 @@
 </header>
 
 <!--<div class="menu">-->
-  <!--<ul>-->
+<!--<ul>-->
 <!--FOR VERSION 2.0-->
-  <!--</ul>-->
+<!--</ul>-->
 <!--</div>-->
 
 <div class="cont">
-<!--TODO: Cars models-->
+  <!--TODO: Parts types-->
 </div>
-
 </body>
 </html>
