[ADD] Static header

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-
 <head>
 
    <title>Palm Parts</title>
@@ -12,13 +10,12 @@
    <link rel="stylesheet" href="../css/style.css">
 </head>
 
-
 <body>
 <% include blocks/header.ejs %>
 
 <div class="cont">
-   <h1>Car is: <%=model%> </h1>
-  <!--TODO: Parts types-->
+<!--TODO: Cars models-->
 </div>
+
 </body>
 </html>
