[ADD] Static head

--- a/views/item.ejs
+++ b/views/item.ejs
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html>
-
-
-<head>
-
-   <title>Palm Parts</title>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width initial-scale=1">
-   <link rel="stylesheet" href="../css/fonts.css">
-   <link rel="stylesheet" href="../css/styles.css">
-   <link rel="stylesheet" href="../css/style.css">
-</head>
-
+<% include blocks/head.ejs %>
 
 <body>
 <% include blocks/header.ejs %>
