--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <img src="img/logo.jpeg">
+    <img src="/assets/img/logo.jpeg">
     <div class="text">
         <h1>Palm Parts</h1>
         <h2><a href="tel:+79219538900">Phone: +79219538900</a></h2>
